# newsletter-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  docker-compose.yaml
.github/workflows/: main.yml
.sqlx/: query-5c58c053bd94775fb6dbe216945cb0b6367dbf905b7c988b1697415b4773904c.json
configuration/: base.yaml
migrations/: 20230730141533_create_subscription_table.sql  20230802091249_add_status_to_subscriptions.sql  20230802093347_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
