[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.72"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
serde = { version = "1.0.178", features = ["derive"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v7"] }

[dev-dependencies]
reqwest = "0.11.18"
