[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.72"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
claims = "0.7.1"
config = "0.13.3"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.178", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.1", features = ["v7"] }
validator = "0.16.1"

[dev-dependencies]
fake = "2.6.1"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.104"
wiremock = "0.5.19"
